feat: refactor category
