# pkg/models/category.go
@@ -9,40 +9,42 @@ import (
 
 // Category represents a jeopardy category in the database.
 type Category struct {
-	CategoryID string `db:"category_id" json:"categoryId" example:"CATEGORYNAME0000"`
+	CategoryID int64  `db:"category_id" json:"categoryId" example:"765"`
 	Name       string `db:"name" json:"name" example:"Category Name"`
-	GameID     int64  `db:"game_id" json:"gameId" example:"8040"`
 }
 
 // CategoryCount represents a the number of times a category has appeared in
 // different games and clues.
 type CategoryCount struct {
-	CategoryID   string `db:"category_id" json:"categoryId" example:"CATEGORYNAME0000"`
+	CategoryID   int64  `db:"category_id" json:"categoryId" example:"804001001"`
 	CategoryName string `db:"category_name" json:"categoryName" example:"Category Name"`
 	GameCount    int    `db:"game_count" json:"gameCount" example:"1"`
 	ClueCount    int    `db:"clue_count" json:"clueCount" example:"5"`
 }
 
 // InsertCategory inserts a category into the database.
-func (db *JeppDB) InsertCategory(c *Category) error {
-	if c == nil {
-		return nil
+func (db *JeppDB) InsertCategory(name string) (*Category, error) {
+	if name == "" {
+		return nil, oops.Errorf("cannot insert empty category")
 	}
 
-	c.CategoryID = GetCategoryID(c.Name)
-
 	tx := db.MustBegin()
-	_, err := db.NamedExec("INSERT INTO category (category_id, name, game_id) VALUES (:category_id, :name, :game_id)", c)
+	res, err := db.Exec("INSERT INTO category (name) VALUES (?)", name)
 	if err != nil {
 		if rollbackErr := tx.Rollback(); rollbackErr != nil {
-			return oops.Wrapf(rollbackErr, "could not rollback category insert: %v", c)
+			return nil, oops.Wrapf(rollbackErr, "could not rollback category insert: %v", name)
 		}
 	}
 
+	var cat *Category
 	if err := tx.Commit(); err == nil {
-		log.Info("inserted category", "category", c)
+		lid, _ := res.LastInsertId()
+		cat = &Category{CategoryID: lid, Name: name}
+		log.Infof("inserted category -- %+v", cat)
+	} else {
+		return nil, oops.Wrapf(err, "could not insert category: %v", name)
 	}
-	return nil
+	return cat, nil
 }
 
 // UpdateCategory updates a category in the database.
@@ -66,7 +68,7 @@ func (db *JeppDB) UpdateCategory(c *Category) error {
 }
 
 // ListCategories returns all categories in the database.
-func (db *JeppDB) ListCategories(params *PaginationParams) ([]*CategoryCount, error) {
+func (db *JeppDB) ListCategories(params *PaginationParams) ([]*Category, error) {
 	if params == nil {
 		params = &PaginationParams{Page: 0, PageSize: 10}
 	}
@@ -74,8 +76,8 @@ func (db *JeppDB) ListCategories(params *PaginationParams) ([]*CategoryCount, er
 	pageSize := params.PageSize
 	offset := params.Page * params.PageSize
 
-	var categories []*CategoryCount
-	if err := db.Select(&categories, "SELECT * FROM category_counts ORDER BY category_id ASC LIMIT ? OFFSET ?", pageSize, offset); err != nil {
+	var categories []*Category
+	if err := db.Select(&categories, "SELECT * FROM category ORDER BY category_id ASC LIMIT ? OFFSET ?", pageSize, offset); err != nil {
 		return nil, oops.Wrapf(err, "could not get all categories")
 	}
 
@@ -86,20 +88,37 @@ func (db *JeppDB) ListCategories(params *PaginationParams) ([]*CategoryCount, er
 	return categories, nil
 }
 
+// func (db *JeppDB) GetCategoryCount(categoryID int64) (*CategoryCount, error) {
+// 	var category CategoryCount
+// 	if err := db.Get(&category, "SELECT * FROM category_counts WHERE category_id=?", categoryID); err != nil {
+// 		return nil, oops.Wrapf(err, "could not get category for id %d", categoryID)
+// 	}
+// 	return &category, nil
+// }
+
 // GetCategory returns the category with the given ID.
-func (db *JeppDB) GetCategory(categoryID string) (*CategoryCount, error) {
-	var category CategoryCount
-	if err := db.Get(&category, "SELECT * FROM category_counts WHERE category_id=?", categoryID); err != nil {
-		return nil, oops.Wrapf(err, "could not get category for id %s", categoryID)
+func (db *JeppDB) GetCategory(categoryID int64) (*Category, error) {
+	var category Category
+	if err := db.Get(&category, "SELECT * FROM category WHERE category_id=?", categoryID); err != nil {
+		return nil, oops.Wrapf(err, "could not get category for id %d", categoryID)
+	}
+
+	return &category, nil
+}
+
+func (db *JeppDB) GetCategoryByName(categoryName string) (*Category, error) {
+	var category Category
+	if err := db.Get(&category, "SELECT * FROM category WHERE name=?", categoryName); err != nil {
+		return nil, oops.Wrapf(err, "could not get category for name %s", categoryName)
 	}
 
 	return &category, nil
 }
 
 // GetRandomCategory returns a single category from the database.
-func (db *JeppDB) GetRandomCategory() (*CategoryCount, error) {
-	var allCategoryIDs []string
-	if err := db.Select(&allCategoryIDs, "SELECT category_id FROM category_counts"); err != nil {
+func (db *JeppDB) GetRandomCategory() (*Category, error) {
+	var allCategoryIDs []int64
+	if err := db.Select(&allCategoryIDs, "SELECT category_id FROM category"); err != nil {
 		return nil, oops.Wrapf(err, "getting category ids")
 	}
 
